--- a/tasca6llenguatge/style.css
+++ b/tasca6llenguatge/style.css
@@ -21,7 +21,7 @@ a {
 
 }
 
-.contenedor {
+.contenedor p{
     font-style: italic;
     font-family: 'Gill Sans', 'Gill Sans MT',sans-serif;
 
@@ -30,6 +30,22 @@ a {
 
 #texto {
     color:cornflowerblue ;
+
+}
+
+div a{
+    text-align: center;
+    font-size: 2rem;
+    color:green ;
+}
+div a:hover {
+    text-align: center;
+    font-size: 2rem;
+    color:black ;
+}
+
+div a::after{
+    text-decoration: ;
 
 }
 
