--- a/PRACTICA1SergiMartinez/exercici2llenguatge/style.css
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/style.css
@@ -63,20 +63,23 @@ span a{
 span a:hover{
     color: rgb(0, 255, 34);
 }
-.navegacion li{
-    text-align: left;
+#lista{
+    text-align: center;
+}
+.navegacion {
+    text-align: center;
     font-family:Helvetica, sans-serif;
     font-style: italic;
     font-size: 20px;
     background-color: bisque;
-    display: inline;
+    display: block;
     
 }
 
-.navegacion:hover li{
+.navegacion:hover {
     color: #ff80c0;
     background-color: rgb(162, 229, 229);
-    text-align: left;
+   
     
     
 }
