--- a/PRACTICA1SergiMartinez/exercici2llenguatge/taules.css
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/taules.css
@@ -3,15 +3,22 @@
 
 .titulo {
     font-size: 40px;
+    text-align: center;
+}
+.boton {
+    border-top-width: 20px;
+    left: 0%;
+
 }
 
 
 
-
 .tabla {
-    width: 100%; 
-    height: 200%; 
+    width: 50%; 
+    left: 25%; 
     border-collapse: collapse;
+    position: relative;
+    
 }
 
 .palabras :hover{
