--- a/PRACTICA1SergiMartinez/exercici2llenguatge/taules.css
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/taules.css
@@ -1,16 +1,10 @@
 @import url(style.css);
 
-
-.titulo {
-    font-size: 40px;
-    text-align: center;
-}
-.boton {
-    border-top-width: 20px;
-    left: 0%;
+#boton a{
+    text-decoration: none;
+    
 
 }
-
 
 
 .tabla {
