--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -13,10 +13,26 @@ body {
     background-color:#BFBFAA ;
     display: flex;
     flex-direction: row-reverse;
+    padding: 100px;
+    align-items: center;
     
 }
 
+.caja2 {
+    background-color: #73555C;
+    display: flex;
+    width: 600px;
+    height: 300px;
+}
 .titulos { 
     padding: auto; 
+    font-size: 50px;
+    
     
 } 
+.img {
+    width:600px;
+    height:600px;
+    border-radius:320px;
+    border:10px solid #666;
+}
