--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: Coolvetica ;
+    src: url(/Windows/Fonts/Coolvetica.ttf));
+    font-style:normal ;
+    font-weight:lighter;
+}
+
+
 * {
     margin-left: 70px;
     margin-right: 70px;
@@ -19,7 +27,7 @@ body {
 }
 
 .caja1 h1 {
-
+  
 }
 
 .caja2 {
