--- a/ejerciciosLenguajeDeMarcasJavaScript3/style.css
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/style.css
@@ -3,18 +3,20 @@
     background-color: white;
     
 }
-
+h1 {
+	text-align: center;
+}
 .button {
 	background:#7f8c8d;
 	color:#000000;
 	display:inline-block;
 	font-size:1.25em;
-	margin:20px;
-	padding:10px 0;
+	margin:10px;
+	padding:5px 0;
 	text-align:center;
-	width:200px;
+	width:100px;
 	text-decoration:none;
-	box-shadow:0px 3px 0px #373c3c;
+	box-shadow:0px 1.5px 0px #373c3c;
 }
 
 .button span {
