--- a/ejerciciosLenguajeDeMarcasJavaScript3/style.css
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/style.css
@@ -1,12 +1,32 @@
 @import url(style2.css);
 @import url(font.css);
-.body {
-    background-color: rgb(255, 255, 255);
+
+@media only screen and (max-width: 414px) {
+    
+    body {
+        font-size: 14px;
+    }
 
 }
-h1 {
-	text-align: center;
+@media only screen and (max-width: 768px) {
+    
+    body {
+        font-size: 16px;
+    }
+
 }
+
+body {
+    background-color: rgb(255, 255, 255);
+	font-size: 16px;
+	
+}
+h1 {
+	display: flex;
+	justify-content: center;
+	font-size: 3rem;
+}
+
 
 
 .material-symbols-outlined {
