--- a/ejerciciosLenguajeDeMarcasJavaScript3/dado.css
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/dado.css
@@ -1,9 +1,18 @@
-body{
-    align-items: center;
-    background-color: antiquewhite;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #c0b3b3; /* Color de fondo del cuerpo */
 }
 
-
+.container {
+  background-color: #ffffff; /* Color de fondo del contenedor */
+  padding: 20px;
+  border-radius: 20px; /* Bordes redondos */
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1); /* Sombra */
+}
 
 .dice {
     width: 100px;
@@ -40,7 +49,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgb(188, 238, 244);
     border: 2px solid black;
   }
   
@@ -54,5 +63,14 @@ body{
     border-radius: 50%;
     transform: translate(-50%, -50%);
   }
-  
+.dadete {
+  border-radius: 36px 36px 36px 36px;
+  -moz-border-radius: 36px 36px 36px 36px;
+  -webkit-border-radius: 36px 36px 36px 36px;
+  border: 0.1px solid #000000;
+  -webkit-box-shadow: 10px 10px 36px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 36px 1px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 36px 1px rgba(0,0,0,0.75);
+}
+
   
